<resources>
    <string name="app_name">RoomDatabasePractice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fab">Fab</string>
    <string name="add_data">Add Data</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="_1">1</string>
    <string name="john">John</string>
    <string name="doe">Doe</string>
    <string name="_25">(25)</string>
    <string name="update_data">Update Data</string>
    <string name="sort">Sort</string>
    <string name="delete">delete</string>
    <string name="search">Search</string>
    <string name="image">Image</string>
</resources>